; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/bonding/extr_bond_main.c_bond_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/bonding/extr_bond_main.c_bond_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.bonding = type { i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @bond_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bond_close(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.bonding*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.bonding* @netdev_priv(%struct.net_device* %4)
  store %struct.bonding* %5, %struct.bonding** %3, align 8
  %6 = load %struct.bonding*, %struct.bonding** %3, align 8
  %7 = call i32 @bond_work_cancel_all(%struct.bonding* %6)
  %8 = load %struct.bonding*, %struct.bonding** %3, align 8
  %9 = getelementptr inbounds %struct.bonding, %struct.bonding* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load %struct.bonding*, %struct.bonding** %3, align 8
  %11 = call i64 @bond_is_lb(%struct.bonding* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.bonding*, %struct.bonding** %3, align 8
  %15 = call i32 @bond_alb_deinitialize(%struct.bonding* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.bonding*, %struct.bonding** %3, align 8
  %18 = getelementptr inbounds %struct.bonding, %struct.bonding* %17, i32 0, i32 0
  store i32* null, i32** %18, align 8
  ret i32 0
}

declare dso_local %struct.bonding* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @bond_work_cancel_all(%struct.bonding*) #1

declare dso_local i64 @bond_is_lb(%struct.bonding*) #1

declare dso_local i32 @bond_alb_deinitialize(%struct.bonding*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
